syntax = "proto2";

package trpc.olpush;

import "trpc/olpush/comm_msg.proto";

// trpc.msg.olpush.OlPushService.MsgPush
message MsgPush {
  required Message msg = 1;
}

message Message {
  required RoutingHead routing_head = 1;
  required ContentHead content_head = 2;
  required MessageBody msg_body = 3;
}
